<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--android:button="@null" -->
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/background"
                android:textSize="20sp"
                android:text="@string/random_color"
                android:padding="16dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lines"
                android:textSize="20sp"
                android:text="@string/random_lines"
                android:padding="16dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sierpinski"
                android:textSize="20sp"
                android:text="@string/sierpinski_triangle"
                android:padding="16dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/colorful_sierpinski"
                android:textSize="20sp"
                android:text="@string/colorful_sierpinski_triangle"
                android:padding="16dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mandelbrot"
                android:textSize="20sp"
                android:text="@string/mandelbrot_set"
                android:padding="16dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/terrain"
                android:textSize="20sp"
                android:text="@string/random_terrain"
                android:padding="16dp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
</ScrollView>
